tests/assignment/faulty_global_constant.sy
a :: 1

start :: fn do
    a = 2
end

// error: $Assignability
